--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,6 +39,7 @@ target 'intergo' do
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   pod 'react-native-fbsdk', :path => '../node_modules/react-native-fbsdk'
+  pod 'Firebase/Analytics'
 
   target 'intergoTests' do
     inherit! :search_paths
